--- a/mods.html
+++ b/mods.html
@@ -189,8 +189,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:42%"></div>
-			<div class="kindof-updated" style="width:34%"></div>
+			<div class="updated" style="width:44%"></div>
+			<div class="kindof-updated" style="width:32%"></div>
 			<div class="kindof-outdated" style="width:10%"></div>
 			<div class="outdated" style="width:14%"></div>
 		</div>
@@ -654,7 +654,7 @@
 				<p>Improves performance, reduces memory usage, and fixes many bugs.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="whiteout">
