shulker box tooltip update

--- a/mods.html
+++ b/mods.html
@@ -189,8 +189,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:44%"></div>
-			<div class="kindof-updated" style="width:31%"></div>
+			<div class="updated" style="width:46%"></div>
+			<div class="kindof-updated" style="width:29%"></div>
 			<div class="kindof-outdated" style="width:10%"></div>
 			<div class="outdated" style="width:15%"></div>
 		</div>
@@ -896,7 +896,7 @@
 				<p>See contents of shulker box in inventory.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
