--- a/mods.html
+++ b/mods.html
@@ -189,10 +189,10 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:46%"></div>
-			<div class="kindof-updated" style="width:29%"></div>
-			<div class="kindof-outdated" style="width:10%"></div>
-			<div class="outdated" style="width:15%"></div>
+			<div class="updated" style="width:56%"></div>
+			<div class="kindof-updated" style="width:28%"></div>
+			<div class="kindof-outdated" style="width:2%"></div>
+			<div class="outdated" style="width:14%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -285,7 +285,7 @@
 				<p>More aggressive block face culling.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="zoomify">
@@ -484,7 +484,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21</span>
+				<span class="outdated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
@@ -568,7 +568,7 @@
 				<p>Optimises worldgen performance for a better gameplay experience.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="nvidium">
@@ -670,7 +670,7 @@
 				<p>Renders player skins in 3D.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="better-mount-hud">
@@ -726,7 +726,7 @@
 				<p>Adds missing third-persion animations and modifies others to be better representative.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="paginated-advancements">
@@ -782,7 +782,7 @@
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="wavey-capes">
@@ -796,7 +796,7 @@
 				<p>The cape shouldn't be a static slab.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-outdated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<h2>Tools</h2>
