--- a/mods.html
+++ b/mods.html
@@ -189,10 +189,10 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:56%"></div>
+			<div class="updated" style="width:57%"></div>
 			<div class="kindof-updated" style="width:28%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:14%"></div>
+			<div class="outdated" style="width:13%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -484,7 +484,7 @@
 				<p>Skips rendering entities that aren't in view.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.21.1</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="ferritecore">
