--- a/mods.html
+++ b/mods.html
@@ -189,8 +189,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:57%"></div>
-			<div class="kindof-updated" style="width:28%"></div>
+			<div class="updated" style="width:59%"></div>
+			<div class="kindof-updated" style="width:26%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
 			<div class="outdated" style="width:13%"></div>
 		</div>
@@ -442,7 +442,7 @@
 				<p>See farther without turning your game into a slide show.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="dynamic-fps">
