replace horse stats with jade

--- a/mods.html
+++ b/mods.html
@@ -189,10 +189,10 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:59%"></div>
+			<div class="updated" style="width:61%"></div>
 			<div class="kindof-updated" style="width:26%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:13%"></div>
+			<div class="outdated" style="width:11%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -815,18 +815,18 @@
 				<span class="kindof-outdated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
-		<div class="mod" id="horse-stats-vanilla">
+		<div class="mod" id="jade">
 			<div class="mod-icon">
-				<img src="https://cdn-raw.modrinth.com/data/l4qoXLzx/icon.png" />
+				<img src="https://cdn.modrinth.com//data/nvQzSEkH/icon.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/horsestatsvanilla" target="_blank">Horse Stats Vanilla</a>
+					<a href="https://modrinth.com/mod/jade" target="_blank">Jade</a>
 				</h3>
-				<p>Displays the stats of horses, donkeys, and mules in their inventories.</p>
+				<p>Shows information about what you are looking at.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="litematica">
