--- a/mods.html
+++ b/mods.html
@@ -325,6 +325,7 @@
 					<a href="https://modrinth.com/mod/cit-resewn" target="_blank">CIT Resewn</a>
 				</h3>
 				<p>Implements the OptiFine custom item textures format.</p>
+				<p><i>(1.20.5 completely overhauled the structure of item data. <a href="https://github.com/sp614x/optifine/issues/7658" target="_blank">A new format is being discussed.</a>)</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="outdated"><span class="circle"></span> 1.20.4</span>
