--- a/mods.html
+++ b/mods.html
@@ -190,9 +190,9 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<div class="updated" style="width:60%"></div>
-			<div class="kindof-updated" style="width:27%"></div>
+			<div class="kindof-updated" style="width:28%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:11%"></div>
+			<div class="outdated" style="width:10%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -750,12 +750,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://www.curseforge.com/minecraft/mc-mods/smooth-swapping" target="_blank">Smooth Swapping</a>
+					<a href="https://github.com/YoungSoulluoS/Smooth-Swapping-1.20.4-Port/releases/tag/1.21-Fabric" target="_blank">Smooth Swapping</a>
 				</h3>
 				<p>Adds a smooth animation when moving items between containers.</p>
+				<p><i>(Official mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.2</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="sound-physics-remastered">
