--- a/mods.html
+++ b/mods.html
@@ -753,7 +753,7 @@
 					<a href="https://github.com/YoungSoulluoS/Smooth-Swapping-1.20.4-Port/releases/tag/1.21-Fabric" target="_blank">Smooth Swapping</a>
 				</h3>
 				<p>Adds a smooth animation when moving items between containers.</p>
-				<p><i>(Official mod appears abandoned.)</i></p>
+				<p><i>(<a href="https://modrinth.com/mod/smooth-swapping" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
