drip sounds update

--- a/mods.html
+++ b/mods.html
@@ -190,9 +190,9 @@
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
 			<div class="updated" style="width:60%"></div>
-			<div class="kindof-updated" style="width:28%"></div>
+			<div class="kindof-updated" style="width:30%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:10%"></div>
+			<div class="outdated" style="width:8%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -694,12 +694,13 @@
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://modrinth.com/mod/dripsounds-fabric" target="_blank">Drip Sounds</a>
+					<a href="https://github.com/Rektroth/DripSounds-Fabric/releases/tag/1.21" target="_blank">Drip Sounds</a>
 				</h3>
 				<p>Adds sounds for drip particles landing.</p>
+				<p><a href="https://modrinth.com/mod/dripsounds-fabric" target="_blank">Official</a> mod appears abandoned.</p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
 			</div>
 		</div>
 		<div class="mod" id="effective">
