--- a/mods.html
+++ b/mods.html
@@ -697,7 +697,7 @@
 					<a href="https://github.com/Rektroth/DripSounds-Fabric/releases/tag/1.21" target="_blank">Drip Sounds</a>
 				</h3>
 				<p>Adds sounds for drip particles landing.</p>
-				<p><a href="https://modrinth.com/mod/dripsounds-fabric" target="_blank">Official</a> mod appears abandoned.</p>
+				<p><i>(<a href="https://modrinth.com/mod/dripsounds-fabric" target="_blank">Official</a> mod appears abandoned.)</i></p>
 			</div>
 			<div class="mod-version">
 				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
