--- a/mods.html
+++ b/mods.html
@@ -189,8 +189,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:60%"></div>
-			<div class="kindof-updated" style="width:30%"></div>
+			<div class="updated" style="width:63%"></div>
+			<div class="kindof-updated" style="width:27%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
 			<div class="outdated" style="width:8%"></div>
 		</div>
@@ -627,7 +627,7 @@
 				<p>Fixes the stitching on block and item models.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="modern-fix">
@@ -655,7 +655,7 @@
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<h2>Graphical and Audio Improvements</h2>
