notes on modrinth

--- a/mods.html
+++ b/mods.html
@@ -876,11 +876,11 @@
 		</div>
 		<div class="mod" id="notes">
 			<div class="mod-icon">
-				<img src="https://media.forgecdn.net/avatars/85/870/636205417489993262.png" />
+				<img src="https://cdn.modrinth.com/data/ko8Qabo1/20c8e6917a98edb6eba063fdfb6137d0063c86f3.png" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://www.curseforge.com/minecraft/mc-mods/notes" target="_blank">Notes</a>
+					<a href="https://modrinth.com/mod/notes" target="_blank">Notes</a>
 				</h3>
 				<p>Adds a notepad to the game UI.</p>
 			</div>
