--- a/mods.html
+++ b/mods.html
@@ -189,10 +189,10 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:69%"></div>
-			<div class="kindof-updated" style="width:23%"></div>
+			<div class="updated" style="width:63%"></div>
+			<div class="kindof-updated" style="width:21%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:6%"></div>
+			<div class="outdated" style="width:4%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -328,7 +328,7 @@
 				<p><i>(1.20.5 completely overhauled the structure of item data. <a href="https://github.com/sp614x/optifine/issues/7658" target="_blank">A new format is being discussed.</a>)</i></p>
 			</div>
 			<div class="mod-version">
-				<span class="outdated"><span class="circle"></span> 1.20.4</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="continuity">
@@ -728,7 +728,7 @@
 				<p>Overhauls the advancements screen.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="smooth-swapping">
