--- a/mods.html
+++ b/mods.html
@@ -189,8 +189,8 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:73%"></div>
-			<div class="kindof-updated" style="width:21%"></div>
+			<div class="updated" style="width:76%"></div>
+			<div class="kindof-updated" style="width:15%"></div>
 			<div class="kindof-outdated" style="width:2%"></div>
 			<div class="outdated" style="width:4%"></div>
 		</div>
@@ -471,7 +471,7 @@
 				<p>Reduces lag by rendering block entities as normal blocks.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="entityculling">
@@ -1043,7 +1043,7 @@
 				<p>Required by <a href="#debugify">Debugify</a>.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 	</body>
