--- a/mods.html
+++ b/mods.html
@@ -189,10 +189,17 @@
 		<p>All of these mods are used with the <a href="https://fabricmc.net/" target="_blank">Fabric Mod Loader</a>.</p>
 		<h2>Compatibility Progress</h2>
 		<div class="progress">
-			<div class="updated" style="width:76%"></div>
-			<div class="kindof-updated" style="width:15%"></div>
-			<div class="kindof-outdated" style="width:2%"></div>
-			<div class="outdated" style="width:4%"></div>
+			<!--
+				total mods:          63    100.00%
+				updated:             49     77.78%
+				kind-of updated:     10     15.87%
+				kind-of outdated:    1       1.59%
+				outdated:            3       4.76%
+			-->
+			<div class="updated" style="width:78%"></div>
+			<div class="kindof-updated" style="width:16%"></div>
+			<div class="kindof-outdated" style="width:1%"></div>
+			<div class="outdated" style="width:5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
 		<ul>
@@ -632,11 +639,11 @@
 		</div>
 		<div class="mod" id="whiteout">
 			<div class="mod-icon">
-				<img src="https://raw.githubusercontent.com/Rektroth/Whiteout/master/src/main/resources/assets/whiteout/icon.png" />
+				<img src="https://cdn.modrinth.com/data/5piZC07n/a4f10ca00ced221bd8b1863f9400efad82a2b4fc_96.webp" />
 			</div>
 			<div class="mod-description">
 				<h3>
-					<a href="https://github.com/rektroth/whiteout" target="_blank">Whiteout</a>
+					<a href="https://modrinth.com/mod/whiteout" target="_blank">Whiteout</a>
 				</h3>
 				<p>Ports the bugfixes offered by the Paper project to Fabric.</p>
 			</div>
@@ -731,6 +738,20 @@
 				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
+		<div class="mod" id="smooth-scroll">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/CllP7wW0/6d787d5cd5fface4fe9a5f6ce0770576bca09132.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/smooth-scroll" target="_blank">Smooth Scrolling</a>
+				</h3>
+				<p>Smoothly scrolls chat, hotbar, creative inventory, etc.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
+			</div>
+		</div>
 		<div class="mod" id="smooth-swapping">
 			<div class="mod-icon">
 				<img src="https://media.forgecdn.net/avatars/417/170/637640649236923611.png" />
@@ -769,6 +790,20 @@
 					<a href="https://modrinth.com/mod/tiny-item-animations" target="_blank">Tiny Item Animations</a>
 				</h3>
 				<p>Adds little animations when you pick up or insert items with your mouse.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
+			</div>
+		</div>
+		<div class="mod" id="visuality">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/rI0hvYcd/5c866549318e907bbfe0d525afe43cb17a36a481.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/visuality" target="_blank">Visuality</a>
+				</h3>
+				<p>Little visual improvements by adding a bunch of new particles.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.1</span>
@@ -890,6 +925,20 @@
 		</div>
 		<h2>Other Quality of Life Improvements</h2>
 		<p>The following mods offer other miscellaneous functionalities.</p>
+		<div class="mod" id="better-f1-reborn">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/2JIeCmxb/e8ce320a388b18455e49386aed2ab56578fe19d8_96.webp" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/better-f1-reborn" target="_blank">Better F1 Reborn</a>
+				</h3>
+				<p>Hide only the HUD using F1.</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
+			</div>
+		</div>
 		<div class="mod" id="betterf3">
 			<div class="mod-icon">
 				<img src="https://cdn-raw.modrinth.com/data/8shC1gFX/icon.png" />
@@ -913,6 +962,20 @@
 					<a href="https://modrinth.com/mod/chat-heads" target="_blank">Chat Heads</a>
 				</h3>
 				<p>See who you're chatting with!</p>
+			</div>
+			<div class="mod-version">
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
+			</div>
+		</div>
+		<div class="mod" id="cherished-worlds">
+			<div class="mod-icon">
+				<img src="https://cdn.modrinth.com/data/3azQ6p0W/14d3a7430f4e834fc0a86d228c6e17e5b9b33a0a.png" />
+			</div>
+			<div class="mod-description">
+				<h3>
+					<a href="https://modrinth.com/mod/cherished-worlds" target="_blank">Cherished Worlds</a>
+				</h3>
+				<p>Favorite certain worlds, which will always be at the top of the list.</p>
 			</div>
 			<div class="mod-version">
 				<span class="updated"><span class="circle"></span> 1.21.1</span>
