--- a/mods.html
+++ b/mods.html
@@ -191,14 +191,14 @@
 		<div class="progress">
 			<!--
 				total mods:          63    100.00%
-				updated:             49     77.78%
-				kind-of updated:     10     15.87%
+				updated:             50     79.37%*
+				kind-of updated:     9      14.29%*
 				kind-of outdated:    1       1.59%
 				outdated:            3       4.76%
 			-->
-			<div class="updated" style="width:78%"></div>
-			<div class="kindof-updated" style="width:16%"></div>
-			<div class="kindof-outdated" style="width:1%"></div>
+			<div class="updated" style="width:79%"></div>
+			<div class="kindof-updated" style="width:14%"></div>
+			<div class="kindof-outdated" style="width:2%"></div>
 			<div class="outdated" style="width:5%"></div>
 		</div>
 		<p>The listed Minecraft version is the most recent release that each mod officially supports.</p>
@@ -534,7 +534,7 @@
 				<p>Optimizes networking.</p>
 			</div>
 			<div class="mod-version">
-				<span class="kindof-updated"><span class="circle"></span> 1.21</span>
+				<span class="updated"><span class="circle"></span> 1.21.1</span>
 			</div>
 		</div>
 		<div class="mod" id="language-reload">
